align product of the year

--- a/backend/.env
+++ b/backend/.env
@@ -10,7 +10,7 @@ HS_MERCHANT_USERNAME=nyvyxa
 HS_MERCHANT_PASSWORD=wcbDXPn79jRvFzk4yqF7CA==
 
 # Payment Return URL
-RETURN_URL=https://www.discordsolutions.co/
+RETURN_URL=https://www.discordsolutions.com/
 
 # Secure AES Encryption Keys (Must be exactly 16 characters)
 KEY1=dmd6tq7HrkYpuXqQ
